fix: mobile spacing

--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ aside span {
   }
   aside span {
     display: block;
-    margin: 0 0 30px 0;
+    margin: 30px 0 10px;
   }
 }
 
